# SurvCut

./: .gitattributes  .gitignore  .replit  README.md  SURVCUT_FORMAT_GUIDE.md  SURVCUT_OVERVIEW.md  SURVCUT_TECH_WALKTHROUGH.md  start.sh
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: deps.py  main.py  segment_convert.py
api/app/routers/: crosscuts.py  cuts.py  export.py  schema_.py  upload.py
api/app/schemas/: responses.py
api/tests/: test_smoke.py
cutter_v2/: QUESTION_TYPES_REFERENCE.md  README.md  app.py  requirements.txt  smoke_test.py  smoke_test_e2e.py
cutter_v2/.streamlit/: config.toml
cutter_v2/core/: __init__.py  classifier.py  cross_cut.py  exporter.py  io_layer.py  models.py  single_cut.py
cutter_v2/docs/: sample_datamap_and_rawdata.xlsx
cutter_v3/: .gitignore  README.md  find_circular.py  find_circular_v2.py  requirements.txt  rxconfig.py
cutter_v3/cutter_v3/: __init__.py  cutter_v3.py  state.py
cutter_v3/cutter_v3/components/: shell.py
cutter_v3/cutter_v3/pages/: __init__.py  crosscuts.py  generate.py  themes.py  upload.py  validate.py
cutter_v3/reflex.lock/: package-lock.json  package.json
docs/: CUTS_FRAMEWORK.md  DATAMAP_SPEC.md  SCHEMA.md
engine/: README.md  pyproject.toml
engine/src/cutter_engine/: __init__.py  classifier.py  cross_cut.py  datamap_parser.py  exporter.py  filtering.py  models.py  question_type_detector.py  single_cut.py  theme_grouper.py  validator.py
engine/tests/: test_smoke.py
infra/: docker-compose.yml
web/: .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  template.tsx
web/app/crosscuts/: page.tsx
web/app/dashboard/: page.tsx
web/app/filters-segments/: page.tsx
web/app/generate/: page.tsx
web/components/: cross-cut-chart.tsx  cut-chart.tsx  cut-preview-chart.tsx  cut-visualizer.tsx  mountain-range.tsx  navbar.tsx  query-provider.tsx  segment-builder.tsx  wizard-progress.tsx
web/lib/: api-client.ts  store.ts
(+10 files in other folders)
